Completed Advanced Type Conversion and Operators section

--- a/JavaScript Fundamentals/homes.html
+++ b/JavaScript Fundamentals/homes.html
@@ -9,11 +9,16 @@
     <body>
         <h1>The JavaScript Fundamentals</h1>
         <div>
-            <a href="Hello World/index.html">Hello, World</a>
-            <a href="Code Structure/index.html">Code Structure</a>
-            <a href="The Modern Mode/index.html">The Modern Mode</a>
-            <a href="Variables/index.html">Variables</a>
-            <a href="Data Types/index.html">Data Types</a>
+            <a href="2.1 Hello World/index.html">2.1 - Hello, World</a>
+            <a href="2.2 Code Structure/index.html">2.2 - Code Structure</a>
+            <a href="2.3 The Modern Mode/index.html">2.3 - The Modern Mode</a>
+            <a href="2.4 Variables/index.html">2.4 - Variables</a>
+            <a href="2.5 Data Types/index.html">2.5 - Data Types</a>
+            <a href="2.6 Type Conversions/index.html">2.6 - Type Conversions</a>
+            <a href="2.7 Operators/index.html">2.7 - Operators</a>
+            <a href="2.8 Comparisons/index.html">2.8 - Comparisons</a>
+            <a href="2.9 Interaction/index.html">2.9 - Interaction</a>
+            <a href="2.10 Conditional Operators/index.html">2.10 - Conditional Operators</a>
         </div>
         
     <script src="index.js"></script>
