Completed Advanced JavaScript Loops Tutorial

--- a/JavaScript Fundamentals/home.html
+++ b/JavaScript Fundamentals/home.html
@@ -25,7 +25,7 @@
             <a href="2. JavaScript Fundamentals/2.10 Conditional Operators/index.html">2.10 - Conditional Operators</a>
             <a href="2. JavaScript Fundamentals/2.11 Logical Operators/index.html">2.11 - Logical Operators</a>
             <a href="2. JavaScript Fundamentals/2.12 Loops/">2.12 - Loops</a>
-            <a href="2. JavaScript Fundamentals/2.13 Loops/">2.13 - Switch Statements</a>
+            <a href="2. JavaScript Fundamentals/2.13 Switch Statement//">2.13 - Switch Statements</a>
             <a href="2. JavaScript Fundamentals/2.14 Functions/">2.14 - Functions</a>
             <a href="2. JavaScript Fundamentals/2.15 Function Expressions/">2.15 - Function Expressions</a>
             <a href="2. JavaScript Fundamentals/2.16 Arrow Functions/">2.16 - Arrow Functions</a>
