Completed Advanced Switch Statement workshop

--- a/JavaScript Fundamentals/home.html
+++ b/JavaScript Fundamentals/home.html
@@ -24,30 +24,30 @@
             <a href="2. JavaScript Fundamentals/2.9 Interaction/index.html">2.9 - Interaction</a>
             <a href="2. JavaScript Fundamentals/2.10 Conditional Operators/index.html">2.10 - Conditional Operators</a>
             <a href="2. JavaScript Fundamentals/2.11 Logical Operators/index.html">2.11 - Logical Operators</a>
-            <a href="2. JavaScript Fundamentals/2.12 Loops/">2.12 - Loops</a>
-            <a href="2. JavaScript Fundamentals/2.13 Switch Statement//">2.13 - Switch Statements</a>
-            <a href="2. JavaScript Fundamentals/2.14 Functions/">2.14 - Functions</a>
-            <a href="2. JavaScript Fundamentals/2.15 Function Expressions/">2.15 - Function Expressions</a>
-            <a href="2. JavaScript Fundamentals/2.16 Arrow Functions/">2.16 - Arrow Functions</a>
-            <a href="2. JavaScript Fundamentals/2.17 JavaScript Specials/">2.17 - JavaScript Specials</a>
+            <a href="2. JavaScript Fundamentals/2.12 Loops/index.html">2.12 - Loops</a>
+            <a href="2. JavaScript Fundamentals/2.13 Switch Statement/index.html">2.13 - Switch Statements</a>
+            <a href="2. JavaScript Fundamentals/2.14 Functions/index.html">2.14 - Functions</a>
+            <a href="2. JavaScript Fundamentals/2.15 Function Expressions/index.html">2.15 - Function Expressions</a>
+            <a href="2. JavaScript Fundamentals/2.16 Arrow Functions/index.html">2.16 - Arrow Functions</a>
+            <a href="2. JavaScript Fundamentals/2.17 JavaScript Specials/index.html">2.17 - JavaScript Specials</a>
 
 
             <h1 class="header">3 - Code Quality</h1>
-            <a href="3. Code Quality/3.1 Debugging in Chrome/">3.1 - Debugging in Chrome</a>
-            <a href="3. Code Quality/3.2 Coding Style/">3.2 - Coding Style</a>
-            <a href="3. Code Quality/3.3 Comments/">3.3 - Comments</a>
-            <a href="3. Code Quality/3.4 Ninja Code/">3.4 - Ninja Code</a>
-            <a href="3. Code Quality/3.5 Automated Testing/">3.5 - Automated Testing</a>
-            <a href="3. Code Quality/3.6 Polyfills/">3.6 - Polyfills</a>
+            <a href="3. Code Quality/3.1 Debugging in Chrome/index.html">3.1 - Debugging in Chrome</a>
+            <a href="3. Code Quality/3.2 Coding Style/index.html">3.2 - Coding Style</a>
+            <a href="3. Code Quality/3.3 Comments/index.html">3.3 - Comments</a>
+            <a href="3. Code Quality/3.4 Ninja Code/index.html">3.4 - Ninja Code</a>
+            <a href="3. Code Quality/3.5 Automated Testing/index.html">3.5 - Automated Testing</a>
+            <a href="3. Code Quality/3.6 Polyfills/index.html">3.6 - Polyfills</a>
 
 
             <h1 class="header">4 - Object Fundamentals</h1>
-            <a href="4. Object Fundamentals/4.1 Objects/">4.1 - Objects</a>
-            <a href="4. Object Fundamentals/4.2 Garbage Collection/">4.2 - Garbage Collection</a>
-            <a href="4. Object Fundamentals/4.3 Symbol Type/">4.3 - Symbol Type</a>
-            <a href="4. Object Fundamentals/4.4 Object Methods/">4.4 - Object Methods</a>
-            <a href="4. Object Fundamentals/4.5 Primitive Conversion/">4.5 Primitive Conversion</a>
-            <a href="4. Object Fundamentals/4.6 Constructor/">4.6 - Contructor</a>
+            <a href="4. Object Fundamentals/4.1 Objects/index.html">4.1 - Objects</a>
+            <a href="4. Object Fundamentals/4.2 Garbage Collection/index.html">4.2 - Garbage Collection</a>
+            <a href="4. Object Fundamentals/4.3 Symbol Type/index.html">4.3 - Symbol Type</a>
+            <a href="4. Object Fundamentals/4.4 Object Methods/index.html">4.4 - Object Methods</a>
+            <a href="4. Object Fundamentals/4.5 Primitive Conversion/index.html">4.5 Primitive Conversion</a>
+            <a href="4. Object Fundamentals/4.6 Constructor/index.html">4.6 - Contructor</a>
         </div>
         
     <script src="index.js"></script>
