Completed the first half of the indepth advanced functions course

--- a/JavaScript Fundamentals/2. JavaScript Fundamentals/2.14 Functions/index.html
+++ b/JavaScript Fundamentals/2. JavaScript Fundamentals/2.14 Functions/index.html
@@ -4,10 +4,10 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="index.css">
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet"> 
-        <title>Conditional Operators</title>
+        <title>Functions</title>
     </head>
     <body>
-        <h1>Conditional Operators</h1>
+        <h1>Functions</h1>
         <p>Check the console!</p>
     <script src="index.js"></script>
     </body>
