--- a/The JavaScript Language/home.html
+++ b/The JavaScript Language/home.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="../index.css">
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet"> 
         <title>The JavaScript Fundamentals</title>
     </head>
