Completed Debugging chapter and clean coding styles section

--- a/The JavaScript Language/3. Code Quality/3.1 Debugging in Chrome/index.html
+++ b/The JavaScript Language/3. Code Quality/3.1 Debugging in Chrome/index.html
@@ -4,11 +4,13 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="index.css">
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet"> 
-        <title>Conditional Operators</title>
+        <title>Debugging in Chrome</title>
     </head>
     <body>
-        <h1>Conditional Operators</h1>
+        <h1>Debugging in Chrome</h1>
         <p>Check the console!</p>
+        <p>--</p>
+        <p>Use the debugger in your browser to add break points and test the code provided.</p>
     <script src="index.js"></script>
     </body>
 </html>
