--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <h1 class="title">The JavaScript Language</h1>
         <div>
-            <a class="header" href="The JavaScript Language/home.html">The JavaScript Language</a>
+            <a class="header" href="The JavaScript Language/index.html">The JavaScript Language</a>
             <a class="header">The Browser</a>
             <a class="header">Additional Articles</a>
         </div>
